src/styles/global.css
@import "tailwindcss";

@theme inline {
	--font-sans: var(--font-switzer);
	--font-cabinet: var(--font-cabinet);
	--font-tabular: var(--font-tabular);
	--font-mono: var(--font-tabular);
}

@theme {
	--color-base-50: #f6f6f5;
	--color-base-100: #e7e7e6;
	--color-base-200: #d1d1d0;
	--color-base-300: #b1b0af;
	--color-base-400: #8a8a86;
	--color-base-500: #6f6f6b;
	--color-base-600: #5e5d5c;
	--color-base-700: #504f4e;
	--color-base-800: #464644;
	--color-base-900: #353534;
	--color-base-950: #262626;
}

@utility text-vertical {
	writing-mode: sideways-lr;
}

@utility text-vertical-lr {
	writing-mode: vertical-lr;
}

@utility text-horizontal {
	writing-mode: horizontal-tb;
	text-orientation: mixed;
}

